--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,11 @@ spring.redis.pool.max-wait=-1
 # 连接池中的最大空闲连接
 spring.redis.timeout=0 
 
+
+
+
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/templates
+#设定静态文件路径，js,css等
+spring.mvc.static-path-pattern=/static/**
+
